# testtask-theater-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py
src/: main.cpp
src/app/: context.cpp  context.hpp
src/application/adapters/secondary/in-memory/: movie_registry.hpp  seats_registry.hpp  theater_registry.hpp
src/application/ports/secondary/: movie_registry.hpp  seats_registry.hpp  theater_registry.hpp
src/config/: config.cpp  config.hpp
src/domain/: movie.hpp  seats.hpp  theater.hpp  types.hpp
src/domain/entities/: movie.hpp  theater.hpp  types.hpp
tests/: main.cpp  movies.cpp  seats.cpp  theaters.cpp
